Fixed "Dark mode" bug.

--- a/newspaper/static/config.css
+++ b/newspaper/static/config.css
@@ -6,4 +6,7 @@
     .highlight {
       background: linear-gradient(to bottom, #EBE9E4, #EBE9E4 55%, rgba(221, 68, 68, 0.25) 55%, rgba(221, 68, 68, 0.25));
     }
+    .highlight-2 {
+        background: linear-gradient(to bottom, white, white 55%, rgba(221, 68, 68, 0.25) 55%, rgba(221, 68, 68, 0.25));
+    }
   }
